//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  fullName String
  roles Role [not null]
}

Table Role {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  permissions Json
  userId String
  user User
  organizationId String
  organization Organization
  portfolioId String
  portfolio Portfolio
  tenantId String
  tenant Tenant
}

Table Tenant {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String [not null, default: '']
  shortName String
  civilid String
  dob DateTime
  phone String
  email String
  passportNum String
  nationality String
  residencyNum String
  residencyEnd DateTime
  contactMethod String
  leases Lease [not null]
  maintenanceOrders MaintenanceOrder [not null]
  organizationId String [not null]
  organization Organization [not null]
  roles Role [not null]
}

Table Portfolio {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String [not null, default: '']
  shortName String
  civilid String
  phone String
  email String
  dob DateTime
  expenses Expense [not null]
  maintenanceOrders MaintenanceOrder [not null]
  properties Property [not null]
  roles Role [not null]
  organizationId String [not null]
  organization Organization [not null]
}

Table Organization {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  fullName String [not null, default: '']
  shortName String
  roles Role [not null]
  portfolios Portfolio [not null]
  tenants Tenant [not null]
  planId String
  plan Plan
  planInvoices PlanInvoice [not null]
}

Table Plan {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  label String [not null, default: '']
  title String [not null, default: '']
  description String
  amount Int [not null, default: 0]
  organizations Organization [not null]
}

Table PlanInvoice {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  label String [not null, default: '']
  title String [not null, default: '']
  description String
  amount Int [not null, default: 0]
  organizations Organization [not null]
}

Table ExpenseType {
  id Int [pk, increment]
  labelEn String [not null]
  labelAr String [not null]
  description String
  parentId Int
  parentType ExpenseType
  childTypes ExpenseType [not null]
  expenses Expense [not null]
}

Table Expense {
  id String [pk]
  unitId String
  propertyId String
  portfolioId String
  maintenanceOrderId String
  categoryId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Float [not null]
  postAt DateTime [not null]
  memo String
  portfolio Portfolio
  maintenanceOrder MaintenanceOrder
  property Property
  unit Unit
  expenseType ExpenseType
}

Table Lease {
  id String [pk]
  tenantId String [not null]
  unitId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  start DateTime [not null]
  end DateTime [not null]
  monthlyRent Float [not null]
  deposit Float [not null, default: 0]
  deactivated Boolean [not null, default: false]
  notify Boolean [not null, default: true]
  license String
  tenant Tenant [not null]
  unit Unit [not null]
  transactions Transaction [not null]
}

Table MaintenanceOrder {
  id String [pk]
  tenantId String
  unitId String
  propertyId String
  portfolioId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  completedAt DateTime
  title String
  description String
  status String
  portfolio Portfolio
  property Property
  tenant Tenant
  unit Unit
  expenses Expense [not null]
}

Table Property {
  id String [pk]
  portfolioId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  area String
  block String
  avenue String
  street String
  number String
  parcel String
  paci String
  cost Float
  long Float
  lat Float
  portfolio Portfolio [not null]
  expenses Expense [not null]
  maintenanceOrders MaintenanceOrder [not null]
  units Unit [not null]
}

Table Transaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dueAt DateTime
  postAt DateTime [not null]
  paidAt DateTime
  isPaid Boolean [not null, default: false]
  amount Float [not null]
  memo String
  mfPaymentId String
  leaseId String [not null]
  reminderAt DateTime
  lease Lease [not null]
}

Table Unit {
  id String [pk]
  propertyId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  unitNumber String [not null]
  floor Float
  size Float
  bed Float
  bath Float
  marketRent Float
  type String
  usage String
  property Property [not null]
  expenses Expense [not null]
  leases Lease [not null]
  maintenanceOrders MaintenanceOrder [not null]
}

Table OrganizationToPlanInvoice {
  planinvoicesId String [ref: > PlanInvoice.id]
  organizationsId String [ref: > Organization.id]
}

Ref: Role.userId > User.id [delete: Restrict]

Ref: Role.organizationId > Organization.id [delete: Restrict]

Ref: Role.portfolioId > Portfolio.id [delete: Restrict]

Ref: Role.tenantId > Tenant.id [delete: Restrict]

Ref: Tenant.organizationId > Organization.id [delete: Restrict]

Ref: Portfolio.organizationId > Organization.id [delete: Restrict]

Ref: Organization.planId > Plan.id [delete: Restrict]

Ref: ExpenseType.parentId - ExpenseType.id [delete: No Action]

Ref: Expense.portfolioId > Portfolio.id [delete: Restrict]

Ref: Expense.maintenanceOrderId > MaintenanceOrder.id [delete: Restrict]

Ref: Expense.propertyId > Property.id [delete: Restrict]

Ref: Expense.unitId > Unit.id [delete: Restrict]

Ref: Expense.categoryId > ExpenseType.id [delete: Restrict]

Ref: Lease.tenantId > Tenant.id [delete: Restrict]

Ref: Lease.unitId > Unit.id [delete: Restrict]

Ref: MaintenanceOrder.portfolioId > Portfolio.id [delete: Restrict]

Ref: MaintenanceOrder.propertyId > Property.id [delete: Restrict]

Ref: MaintenanceOrder.tenantId > Tenant.id [delete: Restrict]

Ref: MaintenanceOrder.unitId > Unit.id [delete: Restrict]

Ref: Property.portfolioId > Portfolio.id [delete: Restrict]

Ref: Transaction.leaseId > Lease.id [delete: Restrict]

Ref: Unit.propertyId > Property.id [delete: Restrict]